nes-systests/systest/tests/testdata/errors/result/ResultEmptyButExpectedIsNot.dummy
CREATE LOGICAL SOURCE stream(id UINT64);
CREATE PHYSICAL SOURCE FOR stream TYPE File;
ATTACH INLINE
1

CREATE SINK CORRECT_SINK(stream.id UINT64)  TYPE File;
SELECT id FROM stream WHERE id > UINT64(1) INTO CORRECT_SINK;
----


CREATE SINK INCORRECT_SINK(stream.id UINT64)  TYPE File;
SELECT id FROM stream WHERE id > UINT64(1) INTO INCORRECT_SINK;
----
1
